<resources>
    <string name="app_name">Parasito</string>
    <string name="for_new_players">For New Players</string>
    <string name="how_to_play_human">How to play Human</string>
    <string name="how_to_play_alien">How to play Alien</string>
    <string name="how_to_play_psion">How to play Psion</string>
    <string name="how_to_play_android">How to play Android</string>
    <string name="how_to_play_syndicate">How to play Syndicate</string>
    <string name="locations">Locations</string>
    <string name="game_events">Game Events</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="about">About</string>
    <string name="modes">Modes</string>
    <string name="places">Places</string>
    <string name="sub_roles">Sub\-Roles</string>
    <string name="classic">Classic</string>
    <string name="zeta">Zeta</string>
    <string name="chaos">Chaos</string>
    <string name="station">The Station</string>
    <string name="level1">Level 1: Cargo Bay</string>
    <string name="level2">Level 2: Living Quarters</string>
    <string name="level3">Level 3: Biosphere</string>
    <string name="level4">Level 4: Med bay</string>
    <string name="level5">Level 5: Weapons Center</string>
    <string name="level6">Level 6: Networking and Mechs</string>
    <string name="level7">Level 7: The Bridge</string>
    <string name="reactorLevel">Reactor Level</string>
    <string name="coreLevel">The Core</string>
    <string name="spaceWalk">Spacewalk</string>
    <string name="vents">Ventilation Shaft</string>
    <string name="thor">Military Station Thor</string>
    <string name="planet">Desert Planet</string>
    <string name="DSM">Deep Space Miner</string>
    <string name="SG">Security Guard</string>
    <string name="Doc">Chief Medical Officer</string>
    <string name="CWO">Chief Weapons Officer</string>
    <string name="CMO">Chief Mechs Officer</string>
    <string name="CIO">Chief Intelligence Officer</string>
    <string name="Captain">Captain</string>
    <string name="CEO">Chief Engineer Officer</string>
    <string name="early_game">Early Game</string>
    <string name="mid_game">Mid Game</string>
    <string name="late_game">Late Game</string>
    <string name="dangers">Dangers</string>
    <string name="general_tactics">General Tactics</string>
    <string name="tips">Tips</string>
    <string name="evolution">Evolution</string>
    <string name="alignment">Alignment</string>
    <string name="abilities">Abilities</string>
    <string name="upgrades">Upgrades</string>
    <string name="directive">Directive</string>
    <string name="sabotage">Sabotage</string>
    <string name="for_new_players_about">
        It\'s a game about murder and deception. You and your fellow crew members on the station are stranded on an unknown space sector.
        But you\'re not alone. With you is an alien organism seeking to destroy you. It could be any one of you.
        Will this enemy prevail or will you eliminate it?
    </string>
    <string name="for_new_players_modes_classic">
        In this gamemode, there are only 2 major roles: Humans and Alien.\n
        Alien can infect humans to create spawns and by doing so win by spawning everyone.
        Other way for alien to win this scenario is to kill all humans.\n Humans\' only way to victory is to kill the alien, and it\'s spawns.
    </string>
    <string name="for_new_players_modes_zeta">
        This gamemode gives you more major roles to play with; Psion, Android and Syndicates.\n\n
        Psion: This role is a human with psychic powers. It has a choice to go good,neutral or evil alignment.\n
        Evil alignment\'s goal is to destroy everyone else. Good\'s alignment is to help humans.
        And neutral is&#8230; well neutral. Just survive and you\'re good.\n\n
        Android\'s role is determined by RNG, It gets it\'s goal, or how it is referred to in the game, Directive.\n
        This directive can be: Preserve Alien, Eliminate Humanity or Preserve Humanity.\n\n
        The third and final role is Syndicate.\n In this role you\'re playing as a human, but with a mafia\-esque kind of background and goal.
        Their goal is to sabotage the station and to murder all non\-syndicate crew members.
        To differentiate from humans, they have a stash they can place at the start of the game.
        Stash by itself is invisible and is usually placed in a well\-hidden place.\n\n
        In this gamemode, there can\'t be both alien and syndicates in the game. Only one of the 2.
        Android and Psion role have a chance to appear. There might be a Zeta game without any of those.
    </string>
    <string name="for_new_players_modes_chaos">
        Just like zeta gamemode, you have access to all roles. However, syndicate and alien roles both exist, as well as psion and android.
        Leaving you with 6 humans, and, well&#8230; 6 other\-roled players.
    </string>
    <string name="for_new_players_places_station">
        The station is one of the two main locations of this map. It is sectioned into 9 different levels:
    </string>
    <string name="for_new_players_places_level1">
        On this level you\'ll fine all 8 spaceships, a recycler, a solarite processor, an Auto-doc and a bunch of crates.
        It has spacewalk access, as well as elevators leading to Level 2, and Reactor Level
    </string>
    <string name="for_new_players_places_level2">
        This level is where all players start the game. It holds a Marshall\'s office,
        where Security Guards can look at cameras and upgrade station security. Also houses a Teleporter which can teleport a player to Thor and Planet.\n
        This level has elevators leading to Level 3 and Level 1. Express elevators lead to Reactor level and Core level.
    </string>
    <string name="for_new_players_places_level3">
        Here is what players refer to as \"The Zoo\". Animal life here can be infested by the alien that gives him powerful mindless minions.
        If such situation is ignored, the station can get infested rather quickly.\n
        There is also the alien holding pen, from which you can do an experiment on live alien specimen,
        a Psionic research room, for psi\-research and an Auto-doc.\n
        Elevators lead to Level 2 and Level 4, also has Spacewalk access.
    </string>
    <string name="for_new_players_places_level4">
        This level holds a gene modifier vendor, Medical research station which has an Auto-doc next to it,
        and a Blood tester used to identify Alien lifeform.\n
        Elevators lead to Level 3 and Level 5.
    </string>
    <string name="for_new_players_places_level5">
        Here is where you can upgrade your weapons at the Weapon Upgrade Station, or upgrade the Station Weapons.
        Elevators lead to Level 4 and Level 6, has Spacewalk access.
    </string>
    <string name="for_new_players_places_level6">
        This is where you can find an Armory, where you can upgrade your persona. You can also research Mechs and Station Firmware.\n
        Elevators lead to Level 5 and Level 7, also has express elevators leading to Reactor Level and Core Level.
    </string>
    <string name="for_new_players_places_level7">
        This is where the station captain resides in. Nobody usually goes here without reason. Unless the reason is to kill the captain.
        Has elevator that leads to Level 6 and an express elevator leading to Reactor Level.
    </string>
    <string name="for_new_players_places_reactorLevel">
        Reactor Level is home 2 power links and a transformer which can be interacted with. To cut the power or restore it.
        On this level you can also find the Oxygen generator, which can be turned on/off
        There\'s an elevator leading to Level 1, and 3 express elevators leading to Level 2, Level 6 and Level 7.
    </string>
    <string name="for_new_players_places_theCore">
        This is where the station\'s AI resides in. From here you can produce autonomous robots that act like station security.
        This is also where the Android can upgrade. Express elevators lead to Level 6 and Level 2.
    </string>
    <string name="for_new_players_places_spaceWalk">
        Spacewalk is where you can find the Station\'s Radar dish, which, if destroyed, disables the ability to do Crew or Alien scans.
        It also connects Level 1, Level 3 and Level 5.
    </string>
    <string name="for_new_players_places_ventilationShafts">
        It\'s a maze which connects all levels. All crew members can use them for a faster travel, but more dangerous
        as there is no surveillance or protection from station security.\nThe Vents are divided into 2 sections: Odd vents and Even vents.\n
        Named as such because they connect odd/even levels.
    </string>
    <string name="for_new_players_places_planet">
        Second main location of the map. Has a bunker which contains all the vendors you might need. There are also caves with infested cocoons and solarite veins.
    </string>
    <string name="for_new_players_places_thor">
        Second station that can enter the sector at any time. It\'s a small station with maintenance shaft and a teleporter.
    </string>
    <string name="for_new_players_roles_DSM">
        As a miner, your job is to recycle unused items found from crates in the station.
        Recycler is found on Level 1. After 5 minutes, you can launch into space using one of those spaceships.
        Use those to mine mineral clusters found floating in space.
        Doing so increases your entire crew\'s income while getting you money.
    </string>
    <string name="for_new_players_roles_SG">
        As a security guard, your job is to upgrade station\'s security in Marshall\'s office.
        Besides that, you\'re to patrol the station and suppress any infestation happening (most likely on Level 3).\n
        Killing alien minions gives you money.Also, you get extra health.
    </string>
    <string name="for_new_players_roles_Doc">
        As a doctor, your job is to:\n
        a)Lock the zoo,psi-research room and the alien containment room on Level 3.\n
        b)Perform experiment on contained Alien specimen on Level 3.\n
        c)Unlock the Blood Tester on Level 4.\n
        d)Do research on Level 4.\n
        e)Do psi-research on Level 3.\n
    </string>
    <string name="for_new_players_roles_CWO">
        As a Sargent, your job is to unlock the Weapon Upgrade Station and do research on Level 5.
        Given that this role has lowest income out of them all, it\'s customary to let other people
        come in and do some research for you.
    </string>
    <string name="for_new_players_roles_CMO">
        As a Major, you\'re to upgrade mechs on level 6, as well as unlocking the Armory on the same level.\n
        Once you get a mech, take the flamethrower one and patrol the vents with it. It is much safer that way.
    </string>
    <string name="for_new_players_roles_CIO">
        As a Lieutenant, you\'re to lock the Blood Tester room on level 4.\n
        Usually you do research on Level 6, but you can replace someone if they went missing.\n
        Given that this role has highest income, and gains more income with each research made.
        A better tactic might be to grab all of the low-cost researches as soon as possible.
        (Eg. Recycler unlock at Level 1.)
    </string>
    <string name="for_new_players_roles_Captain">
        As the captain of the station and the crew, your job is to oversee everything going on the station
        by looking through the cameras on Level 7. Occasionally drop down to 6 to do research for Station Firmware.\n
        Beware that you don\'t get murdered for that Captain Keycard you have in your inventory.
    </string>
</resources>