<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/fab_margin"
    android:paddingEnd="@dimen/fab_margin">

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/classic"
            style="@style/ParagraphTitleStyle"
            />

        <TextView
            android:id="@+id/paragraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title1"
            android:text="@string/for_new_players_modes_classic"
            style="@style/ParagraphStyle"
            />

        <TextView
            android:id="@+id/title2"
            android:layout_below="@id/paragraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/zeta"
            style="@style/ParagraphTitleStyle"
            />

        <TextView
            android:id="@+id/paragraph2"
            android:layout_below="@id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_new_players_modes_zeta"
            style="@style/ParagraphStyle"
            />

        <TextView
            android:id="@+id/title3"
            android:layout_below="@id/paragraph2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/chaos"
            style="@style/ParagraphTitleStyle"
            />

        <TextView
            android:id="@+id/paragraph3"
            android:layout_below="@id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/for_new_players_modes_zeta"
            style="@style/ParagraphStyle"
            />
    </RelativeLayout>
</ScrollView>